--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,16 @@
     }
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(233, 232, 232);
+}
+
 .graficos{
     display: flex;
+    justify-content: center;
 }
 
 .circulo1{
@@ -38,7 +46,7 @@
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
-    stroke: rgb(216, 212, 212);
+    stroke: rgb(190, 190, 190);
 }
 .circulo2{
     fill: none;
@@ -46,7 +54,7 @@
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
-    stroke: rgb(216, 212, 212);
+    stroke: rgb(190, 190, 190);
 }
 
 .circulo3{
@@ -55,7 +63,7 @@
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
-    stroke: rgb(216, 212, 212);
+    stroke: rgb(190, 190, 190);
 }
 
 .circulo4{
@@ -64,7 +72,7 @@
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
-    stroke: rgb(216, 212, 212);
+    stroke: rgb(190, 190, 190);
 }
 
 .circulo5{
@@ -73,7 +81,7 @@
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
-    stroke: rgb(216, 212, 212);
+    stroke: rgb(190, 190, 190);
 }
 
 .fondo1{
@@ -119,4 +127,51 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.titulos{
+    text-align: center;
+}
+
+.lista{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+}
+
+li{
+    margin-right: 50px;
+    
+    
+}
+
+.cuadro{
+    border: 2px solid black;
+    width: 950px;
+}
+
+svg{
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+hr{
+    border: none;
+    height: 2px;
+    background-color: black;
+    
+}
+
+.skills{
+    margin-left: 100px;
+    font-size: 20px;
+}
+
+.puesto{
+    font-size: 18px;
+}
+
+.nombre{
+    font-size: 30px;
 }
