--- a/styles.css
+++ b/styles.css
@@ -270,4 +270,5 @@ button:hover{
     align-items: center;
     justify-content: center;
     margin-top: -30px;
+    background-color: rgb(190, 190, 190);
 }
